--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 
 				<div class="login__footer">
 					<div class="login__footer_lang">
-						<a href="#" class="login__footer-link">Українська</a>
+						<a href="#" class="login__footer-link lang">Українська</a>
 						<svg aria-hidden="true" class="stUf5b MSBt4d" fill="currentColor" focusable="false" width="15px" height="15px" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg"><polygon points="12,16.41 5.29,9.71 6.71,8.29 12,13.59 17.29,8.29 18.71,9.71"></polygon></svg>
 					</div>
 					<div class="login__footer_privace">
