--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<!-- Primary Meta Tags -->
 	<meta name="title" content="Google">
 	<meta name="description" content="In your Google Account, you can see and manage your info, activity, security options, and privacy preferences to make Google work better for you.">
-
+	<!-- LOX -->
 	<!-- FAVICON -->
 	<link rel="apple-touch-icon" sizes="57x57" href="icons/favicon">
 	<link rel="apple-touch-icon" sizes="60x60" href="icons/favicon/apple-icon-60x60.png">
